--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id "groovy"
 	id 'org.jetbrains.kotlin.jvm' version "1.3.21"
 	id "maven-publish"
+	id "com.gradle.plugin-publish" version "0.10.1"
 }
 
 group = groupId
@@ -10,9 +11,23 @@ sourceCompatibility = '1.8'
 
 gradlePlugin {
 	plugins {
-		register("serliDojoHook") {
+		serliDojoHook {
 			id = "com.serli.dojo.gradle-safegit"
 			implementationClass = "com.serli.dojo.gradle.safegit.GitHookPlugin"
+		}
+	}
+}
+
+pluginBundle {
+	website = 'https://github.com/SerliDojo/gradle-safegit'
+	vcsUrl = 'https://github.com/SerliDojo/gradle-safegit'
+	description = 'Handle git hooks within gradle'
+	tags = ['git', 'hook']
+
+	plugins {
+		serliDojoHook {
+			// id is captured from java-gradle-plugin configuration
+			displayName = 'Gradle Safe Git'
 		}
 	}
 }
